# galaxy-sim

./: .gitignore  CMakeLists.txt  README.md  setup_libs.ps1
Space C++/: BlackHole.cpp  BlackHole.h  Camera.cpp  Camera.h  FontRenderer.cpp  FontRenderer.h  PostProcessor.h  Shader.cpp  Shader.h  SolarSystem.cpp  Space C++.vcxproj  Space C++.vcxproj.filters  Stars.cpp  Stars.h  TextureGenerator.cpp  TextureGenerator.h  UI.cpp  UI.h  Window.cpp  main.cpp
Space_cpp/: FontRenderer.cpp  FontRenderer.h  GalacticGas.cpp  GalacticGas.h  GlobalUniforms.h  Input.cpp  PostProcessor.cpp  PostProcessor.h  Shader.cpp  Shader.h  SolarSystem.cpp  SolarSystem.h  Space C++.vcxproj  Stars.cpp  Stars.h  TextureGenerator.cpp  TextureGenerator.h  UI.cpp  UI.h  Window.h  main.cpp
assets/shaders/: bilateral_composite.frag  blackhole.frag  blackhole.vert  depth_downsample.frag  downsample.frag  extract.frag  gas.frag  gas.vert  gas_cull.comp  gas_lowres.frag  orbit.vert  planet.frag  planet.vert  post.frag  post.vert  star.frag  star.vert  star_cull.comp  sun.frag  sun.vert  texture_gen.comp  ui_batch.frag  ui_batch.vert  upsample.frag
